@@ -1,9 +1,9 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: f7991e47928cbd5fc579a2b2f50f3416) *)
+(* DO NOT EDIT (digest: 10fd8a27c9413c870d77e795cc107cd9) *)
 (*
-   Regenerated by OASIS v0.3.0~rc5
+   Regenerated by OASIS v0.3.0~rc6
    Visit http://oasis.forge.ocamlcore.org for more information and
    documentation about functions used in this file.
 *)
@@ -4948,7 +4948,7 @@ module InternalInstallPlugin = struct
                   cs.cs_name
                   (fun () fn ->
                      install_file
-                       ~tgt_fn:cs.cs_name
+                       ~tgt_fn:(cs.cs_name ^ ext_program ())
                        fn
                        bindir)
                   ();
@@ -5593,7 +5593,7 @@ let setup_t =
      distclean_doc = [];
      package =
        {
-          oasis_version = "0.1";
+          oasis_version = "0.3";
           ocaml_version = None;
           findlib_version = None;
           name = "extunix";
@@ -5790,7 +5790,11 @@ let setup_t =
                      cs_plugin_data = [];
                      },
                    {
-                      bs_build = [(OASISExpr.EBool true, true)];
+                      bs_build =
+                        [
+                           (OASISExpr.EBool true, false);
+                           (OASISExpr.EFlag "tests", true)
+                        ];
                       bs_install = [(OASISExpr.EBool true, false)];
                       bs_path = "test/";
                       bs_compiled_object = Best;
@@ -5820,7 +5824,11 @@ let setup_t =
                      cs_plugin_data = [];
                      },
                    {
-                      bs_build = [(OASISExpr.EBool true, true)];
+                      bs_build =
+                        [
+                           (OASISExpr.EBool true, false);
+                           (OASISExpr.EFlag "tests", true)
+                        ];
                       bs_install = [(OASISExpr.EBool true, false)];
                       bs_path = "test/";
                       bs_compiled_object = Best;
@@ -5860,7 +5868,11 @@ let setup_t =
                            post_command = [(OASISExpr.EBool true, None)];
                            };
                       test_working_directory = None;
-                      test_run = [(OASISExpr.EBool true, true)];
+                      test_run =
+                        [
+                           (OASISExpr.ENot (OASISExpr.EFlag "tests"), false);
+                           (OASISExpr.EFlag "tests", true)
+                        ];
                       test_tools =
                         [
                            ExternalTool "ocamlbuild";
@@ -5882,7 +5894,11 @@ let setup_t =
                            pre_command = [(OASISExpr.EBool true, None)];
                            post_command = [(OASISExpr.EBool true, None)];
                            };
-                      doc_build = [(OASISExpr.EBool true, true)];
+                      doc_build =
+                        [
+                           (OASISExpr.ENot (OASISExpr.EFlag "docs"), false);
+                           (OASISExpr.EFlag "docs", true)
+                        ];
                       doc_install = [(OASISExpr.EBool true, true)];
                       doc_install_dir = "$htmldir";
                       doc_title = "API reference for extunix";
@@ -5910,13 +5926,14 @@ let setup_t =
                       })
             ];
           plugins =
-            [(`Extra, "DevFiles", Some "0.2"); (`Extra, "META", Some "0.2")];
+            [(`Extra, "DevFiles", Some "0.3"); (`Extra, "META", Some "0.3")];
           schema_data = PropList.Data.create ();
           plugin_data = [];
           };
      oasis_fn = Some "_oasis";
-     oasis_version = "0.3.0~rc5";
-     oasis_digest = Some "\164\018\134\021p!\222\0149\"\014\242\181Yc\182";
+     oasis_version = "0.3.0~rc6";
+     oasis_digest =
+       Some "\205S\248\154\204\026\191\238\159\235UY\193\204\022\n";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -5924,6 +5941,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 5928 "setup.ml"
+# 5945 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
