@@ -4,6 +4,8 @@
   * --disable-* options to exclude selected features from build
 * More precise test for `sendmsg` (bug #1162)
 * Fix FTBFS on kfreebsd-* (Debian patch)
+* Unit tests are disabled by default and oUnit is now an optional dependency,
+  configure with --enable-tests to build tests
 
 0.0.4 - 19 May 2012
 * ExtUnix now depends on Bigarray and provides variants of 
